# book-inventory

./: .gitignore  README.md  back_end.py  front_end.py  front_end.spec  pyproject.toml
