[tool.poetry]
name = "book-inventory"
version = "0.1.0"
description = ""
authors = ["Tommaso Corato <tommaso.corato@glovoapp.com>"]

[tool.poetry.dependencies]
python = ">=3.9, <3.11"
tk = "^0.1.0"
pysqlite3 = "^0.4.7"
pyinstaller = "^4.10"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
